vlib/v/checker/tests/map_none_value_type_err.out
vlib/v/checker/tests/map_none_value_type_err.vv:1:6: error: cannot use `none` as map value type
    1 | _ := map[int]none{}
      |      ~~~~~~~~~~~~~~
